cmake_minimum_required(VERSION 3.17)
project(C___Programming__cs217a_)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___Programming__cs217a_
        "sem 1/assignmenttwo.cpp"
        "sem 1/SemOneAssign.cpp"
        "sem 2/problemfromteach.cpp"
        "sem 2/SeminarTwoAssign.cpp"
        "sem 3/answerto3.cpp"
        "sem 3/PalindromeNum.cpp"
        "sem 3/SemThreeAssign.cpp"
        "sem 4/sem4prog.cpp"
        "sem 5/sem5prog.cpp"
        "sem 5/teachercode.cpp"
        "sem 6/fifthAttempt.cpp"
        "sem 6/final.cpp"
        "sem 6/firstAttemptMain.cpp"
        "sem 6/fourthAttemptMain.cpp"
        "sem 6/gerald.cpp"
        "sem 6/itemSort.cpp"
        "sem 6/readFile.cpp"
        "sem 6/secondAttemptMain.cpp"
        "sem 6/seventhAttempt.cpp"
        "sem 6/sixthAttempt.cpp"
        "sem 6/thirdAttemptMain.cpp"
        Sem_5_Prog_Ex/Sem_5_Prog_Ex/ScoreRanges.cpp
        nameage.cpp
        practicefor.cpp
        thecporg.cpp)
